--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -21,7 +21,7 @@ messages:
   notInt: "{prefix} &cThe amount argument is not a number!"
   addCoins: "{prefix} &aYou have given &e{amount} {type} coins &ato &e{player}"
   addCoinsOthers: "{prefix} &aYou have received &e{amount} {type} coins&a."
-  invalidType: "{prefix} &aAvaiable types are: &ephysical &aand &evirtual&a."
+  invalidType: "{prefix} &cInvalid types! &7(physical, virtual)"
   removeCoins: "{prefix} &aYou have removed &e{amount} coins &afrom &e{player}"
   removeCoinsOthers: "{prefix} &e{amount} coins &ahas been removed from your account!"
   setCoins: "{prefix} &aYou have set &e{player} &acoins to &e{amount}"
