--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ version: 1.0.0
 main: me.aglerr.mobcoins.MobCoins
 author: aglerr
 api-version: 1.13
+softdepend: [WildStacker, MythicMobs, PlaceholderAPI]
 
 commands:
   mobcoins:
