--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,8 @@ version: 1.0.0
 main: me.aglerr.mobcoins.MobCoins
 author: aglerr
 api-version: 1.13
-softdepend: [WildStacker, MythicMobs, PlaceholderAPI]
+softdepend: [WildStacker, MythicMobs]
+depend: [PlaceholderAPI]
 
 commands:
   mobcoins:
