--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -43,9 +43,22 @@ shops:
     updateEvery: 20
 
 # List of all placeholders that are being used
+# Information:
+# placeholders:
+#   (unlimitedStock) Will be used when shop item doesn't use stock system
+#   (outOfStock) Will be used when shop items is out of stock
+#   (mobCoinsTop) All placeholders for mobcoins top leaderboard
+#     (nameIfEmpty) Will be used If there is no player on that position
+#     (balanceIfEmpty) Will be used If there is no player on that position
+#     (uuidIfEmpty) Will be used If there is no player on that position
+#----------------------------------------------------------------------
 placeholders:
   unlimitedStock: "&aUnlimited"
   outOfStock: "&c&lOUT OF STOCK"
+  mobCoinsTop:
+    nameIfEmpty: "&7None"
+    balanceIfEmpty: "0"
+    uuidIfEmpty: "none"
 
 # What world should we disable player from receiving mobcoin?
 disabledWorlds:
@@ -144,6 +157,22 @@ messages:
   itemOutOfStock: "{prefix} &cItem is out of stock!"
   purchaseLimitReached: "{prefix} &cYou can not purchase this item anymore!"
   minimumAmount: "{prefix} &cThe minimum amount is 1"
+  topLeaderboard:
+    - "&6--------------------------------------"
+    - "  &7Mobcoins Leaderboard"
+    - ""
+    - "   &6#1. &7%mobcoins_top_name_1% - &6%mobcoins_top_balance_formatted_1% coins"
+    - "   &6#2. &7%mobcoins_top_name_2% - &6%mobcoins_top_balance_formatted_2% coins"
+    - "   &6#3. &7%mobcoins_top_name_3% - &6%mobcoins_top_balance_formatted_3% coins"
+    - "   &6#4. &7%mobcoins_top_name_4% - &6%mobcoins_top_balance_formatted_4% coins"
+    - "   &6#5. &7%mobcoins_top_name_5% - &6%mobcoins_top_balance_formatted_5% coins"
+    - "   &6#6. &7%mobcoins_top_name_6% - &6%mobcoins_top_balance_formatted_6% coins"
+    - "   &6#7. &7%mobcoins_top_name_7% - &6%mobcoins_top_balance_formatted_7% coins"
+    - "   &6#8. &7%mobcoins_top_name_8% - &6%mobcoins_top_balance_formatted_8% coins"
+    - "   &6#9. &7%mobcoins_top_name_9% - &6%mobcoins_top_balance_formatted_9% coins"
+    - "   &6#10. &7%mobcoins_top_name_10% - &6%mobcoins_top_balance_formatted_10% coins"
+    - ""
+    - "&6--------------------------------------"
   help:
     - "Current Help"
     - "/mobcoins help"
