Add an update checker

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -189,10 +189,26 @@ messages:
     - ""
     - "&6--------------------------------------"
   help:
-    - "Current Help"
-    - "/mobcoins help"
-    - "/mobcoins balance"
+    - "&e&lMobcoins Help &7- by aglerr"
+    - "&e- /mobcoins help &7- shows up help messages"
+    - "&e- /mobcoins balance [other] &7- see your/others mobcoins balance"
+    - "&e- /mobcoins pay <player> <amount> &7- give others mobcoins"
+    - "&e- /mobcoins shop &7- open up the shop menu"
+    - "&e- /mobcoins withdraw <amount> &7- turn virtual mobcoins into physical"
+    - "&e- /mobcoins top &7- shows the mobcoins leaderboard"
   helpAdmin:
-    - "Admin Help"
-    - "/mobcoins help"
-    - "/mobcoins balance"
+    - "&e&lMobcoins Help &7(Admin) - by aglerr"
+    - "&e- /mobcoins help &7- shows up help messages"
+    - "&e- /mobcoins balance [other] &7- see your/others mobcoins balance"
+    - "&e- /mobcoins pay <player> <amount> &7- give others mobcoins"
+    - "&e- /mobcoins shop &7- open up the shop menu"
+    - "&e- /mobcoins withdraw <amount> &7- turn virtual mobcoins into physical"
+    - "&e- /mobcoins top &7- shows the mobcoins leaderboard"
+    - "&e- /mobcoins about &7- see the plugin version and authors"
+    - "&e- /mobcoins debug &7- enable/disable debug mode"
+    - "&e- /mobcoins give <virtual/physical> <player> <amount> &7- gives virtual/physical mobcoins to the player"
+    - "&e- /mobcoins giverandom <virtual/physical> <player> <minimum> <maximum> &7- gives random mobcoins to the player"
+    - "&e- /mobcoins opencategory <category> [player] &7- directly open category shop for you or others"
+    - "&e- /mobcoins reload &7- reload the configuration"
+    - "&e- /mobcoins set <player> <amount> &7- set players mobcoins"
+    - "&e- /mobcoins take <player> <amount> &7- take players mobcoins"
