--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
 name: TheOnly-MobCoins
-version: 1.0.5
+version: 1.0.7
 main: me.aglerr.mobcoins.MobCoins
 author: aglerr
 api-version: 1.13
-softdepend: [WildStacker, MythicMobs, SuperMobCoins, KrakenMobCoins]
+softdepend: [WildStacker, MythicMobs, SuperMobCoins, KrakenMobCoins, JetsMinion]
 depend: [PlaceholderAPI]
 
 commands:
