--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.aglerr.mobcoins</groupId>
     <artifactId>TheOnly-MobCoins</artifactId>
-    <version>1.0.7</version>
+    <version>1.1.0</version>
     <build>
         <plugins>
             <plugin>
@@ -24,8 +24,8 @@
                 <configuration>
                     <relocations>
                         <relocation>
-                            <pattern>me.aglerr.lazylibs</pattern>
-                            <shadedPattern>me.aglerr.mobcoins.utils</shadedPattern>
+                            <pattern>me.aglerr.mclibs</pattern>
+                            <shadedPattern>me.aglerr.mobcoins.mclibs</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>de.tr7zw.changeme.nbtapi</pattern>
@@ -65,6 +65,10 @@
             <name>Lumine Releases</name>
             <url>https://mvn.lumine.io/repository/maven-public/</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -72,7 +76,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.17-R0.1-SNAPSHOT</version>
+            <version>1.18-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -94,7 +98,7 @@
         <dependency>
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
-            <version>2.10.9</version>
+            <version>2.10.10</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -104,24 +108,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>me.aglerr.lazylibs.LazyLibs</groupId>
-            <artifactId>LazyLibs</artifactId>
-            <version>1.0</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>me.aglerr.krakenmobcoins</groupId>
-            <artifactId>KrakenMobCoins</artifactId>
-            <version>2.4</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/deps/KrakenMobcoins-2.4.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>me.jet315.minions</groupId>
-            <artifactId>JetsMinion-API</artifactId>
-            <version>7.2.8</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/deps/JetsMinions-7.2.8.jar</systemPath>
+            <groupId>com.github.aglerr</groupId>
+            <artifactId>MCLibs</artifactId>
+            <version>0.1.1</version>
         </dependency>
     </dependencies>
 
