--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
             <version>0.1.7</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>me.clip</groupId>
+            <artifactId>placeholderapi</artifactId>
+            <version>2.11.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
